<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/black"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.SettingActivity">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/profile"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/profile"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/manageblockedUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/managed_blocked_user"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/manageblockedUsers"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_a_firend"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:layout_below="@+id/manageblockedUsers"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/delete_account"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>