<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VerifyOTP">

    <TextView
        android:id="@+id/texviewPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextOtp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/trying"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextOtp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:hint="Enter The OTP"
        android:inputType="number"
        android:padding="10dp" />

    <TextView
        android:id="@+id/resendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextOtp"
        android:layout_marginStart="-70dp"
        android:layout_toEndOf="@+id/editTextOtp"
        android:text="@string/resend_otp"
        android:textColor="@color/textcolor"
        android:textSize="16sp" />

    <Button
        android:id="@+id/verifyOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextOtp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/verify_otp"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>